--- a/notebook/kubedepend.ipynb
+++ b/notebook/kubedepend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "894bb8ed",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,257 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
-    "matplotlib.style.use('ggplot')"
+    "matplotlib.style.use('ggplot')\n",
+    "\n",
+    "import os\n",
+    "from io import StringIO\n",
+    "import requests as r\n",
+    "from requests.auth import HTTPBasicAuth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "id": "5a98c1d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########\n",
+    "# Constants\n",
+    "###########\n",
+    "\n",
+    "JENKINS_URL = 'http://jenkins:8080'\n",
+    "JENKINS_USER = os.getenv('JENKINS_USER')\n",
+    "JENKINS_PASS = os.getenv('JENKINS_PASS')\n",
+    "JENKINS_JOB_NAME = 'kubedepend'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "94159382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>measurement_seq_start_time</th>\n",
+       "      <th>availability</th>\n",
+       "      <th>mut</th>\n",
+       "      <th>mdt</th>\n",
+       "      <th>mtbf</th>\n",
+       "      <th>measurement_start_time</th>\n",
+       "      <th>measurement_end_time</th>\n",
+       "      <th>fault_profile</th>\n",
+       "      <th>cluster_type</th>\n",
+       "      <th>measurement_count</th>\n",
+       "      <th>load_duration</th>\n",
+       "      <th>locust_user_count</th>\n",
+       "      <th>locust_spawn_rate</th>\n",
+       "      <th>prev_stack_git_commit_short</th>\n",
+       "      <th>comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>da8f0cc1-7fbd-4822-ae46-23deb197ff14</td>\n",
+       "      <td>10-12-2021_19-59-29.404566</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>10-12-2021_19-59-39.745631</td>\n",
+       "      <td>10-12-2021_20-01-48.754475</td>\n",
+       "      <td>custom</td>\n",
+       "      <td>eks</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c0b0e73</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>da8f0cc1-7fbd-4822-ae46-23deb197ff14</td>\n",
+       "      <td>10-12-2021_19-59-29.404566</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>10-12-2021_20-02-47.422559</td>\n",
+       "      <td>10-12-2021_20-04-56.586317</td>\n",
+       "      <td>custom</td>\n",
+       "      <td>eks</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c0b0e73</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e364c668-3d8f-4eb2-81c5-8f724a580933</td>\n",
+       "      <td>10-12-2021_19-18-40.996508</td>\n",
+       "      <td>0.540541</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>111.000000</td>\n",
+       "      <td>10-12-2021_19-18-50.270787</td>\n",
+       "      <td>10-12-2021_19-28-59.177920</td>\n",
+       "      <td>custom</td>\n",
+       "      <td>eks</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cb5884a</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>e364c668-3d8f-4eb2-81c5-8f724a580933</td>\n",
+       "      <td>10-12-2021_19-18-40.996508</td>\n",
+       "      <td>0.475000</td>\n",
+       "      <td>40.714286</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>93.214286</td>\n",
+       "      <td>10-12-2021_19-29-07.156823</td>\n",
+       "      <td>10-12-2021_19-39-16.704654</td>\n",
+       "      <td>custom</td>\n",
+       "      <td>eks</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cb5884a</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9b1eaf3f-6c47-4525-80d9-8bd63faa0289</td>\n",
+       "      <td>10-11-2021_19-54-57.704336</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10-11-2021_19-55-05.900470</td>\n",
+       "      <td>10-11-2021_19-56-13.706457</td>\n",
+       "      <td>none</td>\n",
+       "      <td>eks</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615acfe</td>\n",
+       "      <td>Jenkins test</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id  measurement_seq_start_time  \\\n",
+       "0  da8f0cc1-7fbd-4822-ae46-23deb197ff14  10-12-2021_19-59-29.404566   \n",
+       "1  da8f0cc1-7fbd-4822-ae46-23deb197ff14  10-12-2021_19-59-29.404566   \n",
+       "2  e364c668-3d8f-4eb2-81c5-8f724a580933  10-12-2021_19-18-40.996508   \n",
+       "3  e364c668-3d8f-4eb2-81c5-8f724a580933  10-12-2021_19-18-40.996508   \n",
+       "4  9b1eaf3f-6c47-4525-80d9-8bd63faa0289  10-11-2021_19-54-57.704336   \n",
+       "\n",
+       "   availability        mut   mdt        mtbf      measurement_start_time  \\\n",
+       "0      0.500000  30.000000  60.0   90.000000  10-12-2021_19-59-39.745631   \n",
+       "1      0.000000   0.000000   inf         inf  10-12-2021_20-02-47.422559   \n",
+       "2      0.540541  60.000000  51.0  111.000000  10-12-2021_19-18-50.270787   \n",
+       "3      0.475000  40.714286  52.5   93.214286  10-12-2021_19-29-07.156823   \n",
+       "4      1.000000  60.000000   NaN         NaN  10-11-2021_19-55-05.900470   \n",
+       "\n",
+       "         measurement_end_time fault_profile cluster_type  measurement_count  \\\n",
+       "0  10-12-2021_20-01-48.754475        custom          eks                  2   \n",
+       "1  10-12-2021_20-04-56.586317        custom          eks                  2   \n",
+       "2  10-12-2021_19-28-59.177920        custom          eks                  2   \n",
+       "3  10-12-2021_19-39-16.704654        custom          eks                  2   \n",
+       "4  10-11-2021_19-56-13.706457          none          eks                  1   \n",
+       "\n",
+       "   load_duration  locust_user_count  locust_spawn_rate  \\\n",
+       "0            120                  1                  1   \n",
+       "1            120                  1                  1   \n",
+       "2            600                  1                  1   \n",
+       "3            600                  1                  1   \n",
+       "4             60                  1                  1   \n",
+       "\n",
+       "  prev_stack_git_commit_short       comment  \n",
+       "0                     c0b0e73          test  \n",
+       "1                     c0b0e73          test  \n",
+       "2                     cb5884a          test  \n",
+       "3                     cb5884a          test  \n",
+       "4                     615acfe  Jenkins test  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#########\n",
+    "# Get results from Jenkins and organize them into one DataFrame\n",
+    "#########\n",
+    "session = r.Session()\n",
+    "session.auth = (JENKINS_USER, JENKINS_PASS)\n",
+    "\n",
+    "res = session.get(f'{JENKINS_URL}/job/{JENKINS_JOB_NAME}/api/json')\n",
+    "data = res.json()\n",
+    "builds = data['builds']\n",
+    "\n",
+    "results = pd.DataFrame()\n",
+    "\n",
+    "# Get builds, where there is a 'results.csv' artifact\n",
+    "for build_summary in builds:\n",
+    "    build_number = build_summary['number']\n",
+    "    res = session.get(f'{JENKINS_URL}/job/{JENKINS_JOB_NAME}/{build_number}/api/json')\n",
+    "    build = res.json()\n",
+    "    artifact_list = build['artifacts']\n",
+    "    if artifact_list:\n",
+    "        for artifact in artifact_list:\n",
+    "            if artifact['fileName'] == 'results.csv':\n",
+    "                res = session.get(f'{JENKINS_URL}/job/{JENKINS_JOB_NAME}/{build_number}/artifact/{artifact[\"relativePath\"]}')\n",
+    "                meas_results_df = pd.read_csv(StringIO(res.text), delimiter=',')\n",
+    "                results = results.append(meas_results_df, ignore_index=True)\n",
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c3932b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "bbe817d5",
    "metadata": {},
    "outputs": [
@@ -195,15 +440,24 @@
        "4                     caa27f7  First proper IO test  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_raw = pd.read_csv('../results/results.csv')\n",
-    "results_raw.head()"
+    "results_old_raw = pd.read_csv('../results_old/results.csv')\n",
+    "# results_raw = pd.read_csv('../results/results.csv')\n",
+    "results_old_raw.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccf4334",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1471,7 +1725,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1485,7 +1739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
