Setup GitHub actions for auto latex compilation

--- a/docs/include/guideline.tex
+++ b/docs/include/guideline.tex
@@ -48,6 +48,8 @@ Fontos:
 \vspace{5mm}
 \begin{center}
 Jó munkát, sikeres szakdolgozatkészítést, ill. diplomatervezést kívánunk!
+
+TEST CONTENT
 \end{center}
 
 \normalsize
