Doc structure changes

--- a/docs/content/case-study.tex
+++ b/docs/content/case-study.tex
@@ -2,15 +2,11 @@
 \chapter{Case study}
 %----------------------------------------------------------------------------
 
-%----------------------------------------------------------------------------
-\section{Overview}
-%----------------------------------------------------------------------------
+\begin{itemize}
+	\item Why need a case-study?
+	\item Introduce the general problem it solves (naive implementation of Fibonacci)
+	\item introduce the general master-job-worker pattern it is based upon
 
-%----------------------------------------------------------------------------
-\section{Architecture}
-%----------------------------------------------------------------------------
+\end{itemize}
 
-%----------------------------------------------------------------------------
-\subsection{Components}
-%----------------------------------------------------------------------------
 
