--- a/docs/content/implementation.tex
+++ b/docs/content/implementation.tex
@@ -3,21 +3,43 @@
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\section{Continuous Delivery}
+\section{Application}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\section{Framework}
+\subsection{Backend}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\section{Enhancements}
+\subsection{Worker}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Kafka}
+\subsection{Message Queue}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Heartbeats}
+\subsection{Database}
+%----------------------------------------------------------------------------
+
+
+
+%----------------------------------------------------------------------------
+\section{Test Framework}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Continuous Delivery}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Enhancements}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Kafka}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Heartbeats}
 %----------------------------------------------------------------------------
