Restructure doc, create outline for introduction

--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -10,10 +10,37 @@ A bevezető szokás szerint a diplomaterv felépítésével záródik, azaz anna
 \section{Problem Definition}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item enterprise cloud adoption is growing fast (https://findstack.com/cloud-computing-statistics/)
+	\item lot of critical applications move to the cloud (banking, telco, datastores, software companies, tools) (TODO source)
+	\item many of the cloud base applications can be viewed as critical systems (lot of money at stake, communication at stake - implicitly can cause human harm, \etc)
+	\item \etc
+\end{itemize}
+
 %----------------------------------------------------------------------------
 \section{Motivation}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item dependability of cloud based applications should be constantly monitored and guaranteed
+	\item achieving highly reliable and robust cloud applications
+	\item prepare the cloud application for various kind of failures, anomalies
+	\item \etc
+\end{itemize}
+
 %----------------------------------------------------------------------------
 \section{Goals}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item introduce Kubernetes a widely used system for automating deployment, scaling, and management of containerized applications in the cloud
+	\item define a way to measure dependability metrics in Kubernetes based environments
+	\item create a sample application on the Kubernetes platform to demonstrate the collection of dependability metrics
+	\item investigate the possible alternatives to improve the dependability in different layers of the Kubernetes based deployment/application and implement some of them
+	\item create a framework with fault injection capabilities to measure the effects of the above mentioned improvements
+	\item present and evaluate the measurement results and summarize the gained experiences
+\end{itemize}
+
+%----------------------------------------------------------------------------
+\section{Thesis structure}
 %----------------------------------------------------------------------------
