--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -79,9 +79,9 @@
 %TODO import your own content
 \include{content/introduction}
 \include{content/background}
-\include{content/case-study}
-\include{content/design}
-\include{content/implementation}
+\include{content/sample-application}
+\include{content/test-framework}
+\include{content/enhancements}
 \include{content/evaluation}
 \include{content/future-work}
 \include{content/related-works}
