--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -1,45 +1,55 @@
 %----------------------------------------------------------------------------
-\chapter{Implementation}
+\chapter{Test Framework}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\section{Application}
+\section{Design}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Backend}
+\subsection{Requirements}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item Reproducible
+	\item Automated
+	\item Configurable
+	\item Introduce abstract workflow \begin{enumerate}
+		\item Prepare infrastructure and application
+		\item Generate load
+		\item Inject faults
+		\item Collect metrics
+		\item Store results
+	\end{enumerate}
+\end{itemize}
+
+
+%----------------------------------------------------------------------------
+\subsection{Load generation}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\subsection{Fault Injection}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\subsubsection{Fault Profiles}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item list fault profiles and justification
+\end{itemize}
+
+%----------------------------------------------------------------------------
+\subsection{Measurement Sequence}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Worker}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
-\subsection{Message Queue}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
-\subsection{Database}
-%----------------------------------------------------------------------------
-
-
-
-%----------------------------------------------------------------------------
-\section{Test Framework}
+\section{Implementation}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
 \subsection{Continuous Delivery}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
-\subsection{Enhancements}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
-\subsubsection{Kafka}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
-\subsubsection{Heartbeats}
 %----------------------------------------------------------------------------
