Start outline of sample application

--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -44,3 +44,35 @@ A bevezető szokás szerint a diplomaterv felépítésével záródik, azaz anna
 %----------------------------------------------------------------------------
 \section{Thesis structure}
 %----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item to make the results and the thinking easier to comprehend, the thesis in the following way
+	\item sample application - design and implementation - this will be used the demonstrate the features of the test framework
+	\item test framework
+	\item enhancements - alternatives to improve the dependability of the sample application
+\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
