Further outline changes

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -113,10 +113,6 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Helm}
-%----------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------
 \subsubsection{Pod}
 %----------------------------------------------------------------------------
 
@@ -126,6 +122,18 @@ or Mean Time to Repair
 
 %----------------------------------------------------------------------------
 \subsubsection{Service}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{HPA}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Helm}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{AWS}
 %----------------------------------------------------------------------------
 
 
@@ -140,6 +148,15 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 \subsection{Prometheus}
 %----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Prometheus Blackbox Exporter}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Prometheus Adapter}
+%----------------------------------------------------------------------------
+
 
 %----------------------------------------------------------------------------
 \subsection{Grafana}
