--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -83,8 +83,8 @@
 \include{content/test-framework}
 \include{content/enhancements}
 \include{content/evaluation}
-\include{content/future-work}
-\include{content/related-works}
+%\include{content/future-work}
+%\include{content/related-works}
 \include{content/summary}
 %\include{content/latex-tools}
 %\include{content/thesis-format}
@@ -93,7 +93,7 @@
 
 % Acknowledgements
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\include{content/acknowledgement}
+%\include{content/acknowledgement}
 
 
 % List of Figures, Tables
