Progress on outline

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -129,6 +129,12 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
+\subsubsection{CRD}
+%----------------------------------------------------------------------------
+
+for Chaos Mesh experiments?
+
+%----------------------------------------------------------------------------
 \subsection{Helm}
 %----------------------------------------------------------------------------
 
