--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -2,6 +2,10 @@
 \chapter{Enhancements}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item possibilities to enhance dependability - in which layers of the deployment (infr, K8s definition, application, using 3rd party technologies)
+\end{itemize}
+
 %----------------------------------------------------------------------------
 \section{Design}
 %----------------------------------------------------------------------------
@@ -16,4 +20,12 @@
 
 %----------------------------------------------------------------------------
 \section{Implementation}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Kafka}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Heartbeats}
 %----------------------------------------------------------------------------
