--- a/docs/content/sample-application.tex
+++ b/docs/content/sample-application.tex
@@ -109,7 +109,6 @@ responsibilites + API + health endpoint
 
 \begin{itemize}
 	\item Docker
-	\item K8s deployment Pod, Depl, Service for each , example for each
 \end{itemize}
 
 %----------------------------------------------------------------------------
@@ -151,6 +150,14 @@ responsibilites + API + health endpoint
 	\item configuration? image?
 \end{itemize}
 
+
+\subsection{Kubernetes definitions}
+
+
+\begin{itemize}
+	\item K8s pod, depl, svc exapmle (one for each)
+	\item HPA definition, metrics server
+\end{itemize}
 
 
 
