Start writing sample app requirements

--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -2,21 +2,37 @@
 \chapter{Enhancements}
 %----------------------------------------------------------------------------
 
-\begin{itemize}
-	\item possibilities to enhance dependability - in which layers of the deployment (infr, K8s definition, application, using 3rd party technologies)
-\end{itemize}
-
 %----------------------------------------------------------------------------
 \section{Design}
 %----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item possibilities to enhance dependability - in which layers of the deployment (infr, K8s definition, application, using 3rd party technologies)
+\end{itemize}
 
 %----------------------------------------------------------------------------
 \subsection{Kafka}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
+\subsubsection{Motivation, goals}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item robust, fault-tolerant messaging
+\end{itemize}
+
+%----------------------------------------------------------------------------
 \subsection{Heartbeats}
 %----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Motivation, goals}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item job status reporting, retry in case of lost jobs
+\end{itemize}
 
 %----------------------------------------------------------------------------
 \section{Implementation}
